tests/models/enum/unnamed/u64/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2.0)]
        u64
    ),
}
fn main() {}
